# DistillMind

./: .gitignore  Emotion Representation Pretraining.ipynb  Task-specific Distillation Fine-tuning.ipynb  inference.py  main.py  pyproject.toml
data/raw/phase1/: ArmanEmo.tsv  PersianSyntheticEmotions.jsonl
dataset/: dataset_creator.py  llm_data_generator.py  run_generation.py
dataset/prompts/phase2/: system.txt  user.txt
llm_engine/: base.py  engine.py  gemini_client.py  ollama_client.py
utils/: json_utils.py  prompt_utils.py
