[project]
name = "sentiment-knowledge-distillation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.3.0",
    "google-genai>=1.63.0",
    "jupyter>=1.1.1",
    "ollama>=0.6.1",
    "peft>=0.18.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.51.0",
    "unsloth>=2026.2.1",
]
